[gd_scene load_steps=12 format=3 uid="uid://cohiqpndtgam"]

[ext_resource type="Script" uid="uid://patxjofm5cah" path="res://scripts/chase.gd" id="1_4ra3w"]
[ext_resource type="Texture2D" uid="uid://bdg3c8fyxoxxy" path="res://sprites/slime_green.png" id="1_7p1mj"]
[ext_resource type="PackedScene" uid="uid://dhq0pa6na6p7k" path="res://scenes/killzone.tscn" id="2_md0e3"]
[ext_resource type="PackedScene" uid="uid://yicqblv4ffy0" path="res://scenes/Healthbar.tscn" id="4_5uy6h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_md0e3"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ra3w"]
atlas = ExtResource("1_7p1mj")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uy6h"]
atlas = ExtResource("1_7p1mj")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w8v"]
atlas = ExtResource("1_7p1mj")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_xwavj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md0e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ra3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uy6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4w8v")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nenq2"]
size = Vector2(10, 12)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5uy6h"]
bg_color = Color(0.9999997, 0.35619172, 0.09138615, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_4ra3w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -12)
sprite_frames = SubResource("SpriteFrames_xwavj")
autoplay = "default"
frame_progress = 0.18583591

[node name="Area2D" parent="." instance=ExtResource("2_md0e3")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -7)
shape = SubResource("RectangleShape2D_nenq2")

[node name="Timer2" type="Timer" parent="Area2D"]
wait_time = 0.5
one_shot = true

[node name="Timer3" type="Timer" parent="Area2D"]
wait_time = 0.1
one_shot = true

[node name="Healthbar" parent="Area2D" instance=ExtResource("4_5uy6h")]
offset_left = -10.015
offset_right = 189.985
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0.17254902, 0.9490196, 0.9490196, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_5uy6h")

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="Area2D/Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Area2D/Timer3" to="." method="_on_timer_3_timeout"]
